--- a/publican/web/index.html
+++ b/publican/web/index.html
@@ -3,11 +3,11 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Red Hat Documentation</title>
+	<title>Documentation</title>
 	<link rel="stylesheet" href="default.css" type="text/css" />
 </head>
 <body class="nojs">
-<h1>Welcome to Red Hat Documentation</h1>
+<h1>Documentation</h1>
 <script type="text/javascript">
 	var lang = "";
 	if(window.navigator.userLanguage)
