use correct css file, make link bigger
git-svn-id: file:///srv/svn/publican/trunk@1244 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/web/index.html
+++ b/publican/web/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Documentation</title>
-	<link rel="stylesheet" href="default.css" type="text/css" />
+	<link rel="stylesheet" href="interactive.css" type="text/css" />
 </head>
 <body class="nojs">
 <h1>Documentation</h1>
@@ -54,7 +54,7 @@
 This web site requires JavaScript and cookies to be enabled to function correctly.
 </p>
 <p>
-To view a static Table of Contents click <a href="toc.html">here</a>
+<a href="toc.html">Click here to view a static Table of Contents</a>
 </p>
 </noscript>
 </body>
